# estimate-cars-origin-ml-randomforestclassifier

./: README.md  app.py  install-uv.bat  make-venv-uv.bat  pyproject.toml  requirements.txt  run.bat
data/: cars.csv  test.csv  train.csv
