[project]
name = "estimate-cars-origin-ml-randomforestclassifier"
version = "0.1.0"
description = "estimate-cars-origin-ml-randomforestclassifier"
authors = [
    {name = "Your Name", email = "you@example.com"},
]
readme = "README.md"
requires-python = ">=3.9"

[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"
